syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "https://github.com/e2b-dev/infra/template-manager";


message TemplateConfig {
  string templateID = 1;
  string buildID = 2;

  int32 memoryMB = 3;
  int32 vCpuCount = 4;
  int32 diskSizeMB = 5;

  string kernelVersion = 6;
  string firecrackerVersion = 7;
  string startCommand = 8;
  bool hugePages = 9;
}

message TemplateCreateRequest {
  TemplateConfig template = 1;
}

// Data required for deleting a template.
message TemplateBuildDeleteRequest {
  string templateID = 1;
  string buildID = 2;
}

// Logs from template build
message TemplateBuildLog {
  string log = 1;
}

// Interface exported by the server.
service TemplateService {
  // TemplateCreate is a gRPC service that creates a new template
  rpc TemplateCreate (TemplateCreateRequest) returns (stream TemplateBuildLog);
  // TemplateBuildDelete is a gRPC service that deletes files associated with a template build
  rpc TemplateBuildDelete (TemplateBuildDeleteRequest) returns (google.protobuf.Empty);
}
